# fastapi-boilerplate

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  docker-bake.hcl  pyproject.toml
ci/china/: readme.md
docs/: index.md
src/: app.py  config.toml  lifespan.py  pyproject.toml
src/apps/blog/: handlers.py  models.py  schemas.py  tasks.py
src/core/: authx.py  conf.py  health.py  logger.py  socketio.py  taskiq.py
src/core/storage/: base.py  tests.py
src/core/storage/local/: filesystem.py  tempfilesystem.py
src/core/storage/remote/: minio_storage.py
src/core/tortoise/: models.py
src/migrations/models/: 0_20241225165437_init.py
src/settings/: __init__.py  authentication.py  database.py  logging.py  queue.py  server.py
