[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "FastAPI Boilerplate"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "minio>=7.2.13",
]

[tool.aerich]
tortoise_orm = "lifespan.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
